[project]
name = "deploy-and-manage-adk-service"
version = "0.1.0"
description = "A service for deploying and managing the ADK weather agent."
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.17.0",
    "locust==2.37.10",
    "pg8000==1.31.2",
    "requests==2.32.3",
    "python-dotenv==1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.0",
    "ruff==0.11.13",
]